{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 26,
  "lineage": "ebd0f232-1922-31f5-10d5-7f1f3e209ce0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6820a0d66453f7b",
            "arn": "arn:aws:ec2:eu-north-1:211125441010:elastic-ip/eipalloc-0c6820a0d66453f7b",
            "domain": "vpc",
            "id": "eipalloc-0c6820a0d66453f7b",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-49-58-235.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.58.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "solana-whale-nat-eip-1"
            },
            "tags_all": {
              "Name": "solana-whale-nat-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045ca3b59ad6741a5",
            "arn": "arn:aws:ec2:eu-north-1:211125441010:elastic-ip/eipalloc-045ca3b59ad6741a5",
            "domain": "vpc",
            "id": "eipalloc-045ca3b59ad6741a5",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-61-214-68.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.214.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "solana-whale-nat-eip-2"
            },
            "tags_all": {
              "Name": "solana-whale-nat-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:211125441010:internet-gateway/igw-043dd2f455b505cbd",
            "id": "igw-043dd2f455b505cbd",
            "owner_id": "211125441010",
            "tags": {
              "Name": "solana-whale-igw"
            },
            "tags_all": {
              "Name": "solana-whale-igw"
            },
            "vpc_id": "vpc-0818a06c987259c78"
          },
          "dependencies": [
            "aws_vpc.solana_whale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6820a0d66453f7b",
            "association_id": "eipassoc-00cf5159a1369eebf",
            "connectivity_type": "public",
            "id": "nat-074d261ae40d2027b",
            "network_interface_id": "eni-0c543688402acc461",
            "private_ip": "10.0.1.35",
            "public_ip": "13.49.58.235",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0043b52aa2eed8ee7",
            "tags": {
              "Name": "solana-whale-nat-gw-1"
            },
            "tags_all": {
              "Name": "solana-whale-nat-gw-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.solana_whale_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045ca3b59ad6741a5",
            "association_id": "eipassoc-07c86dab055d61c0b",
            "connectivity_type": "public",
            "id": "nat-0d1eeec35fa90b0a7",
            "network_interface_id": "eni-0aa259ff42aa27a88",
            "private_ip": "10.0.2.169",
            "public_ip": "13.61.214.68",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-086250dee9cabef60",
            "tags": {
              "Name": "solana-whale-nat-gw-2"
            },
            "tags_all": {
              "Name": "solana-whale-nat-gw-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.solana_whale_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:211125441010:route-table/rtb-0eef0a82d3eed3410",
            "id": "rtb-0eef0a82d3eed3410",
            "owner_id": "211125441010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-074d261ae40d2027b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "solana-whale-private-rt-1"
            },
            "tags_all": {
              "Name": "solana-whale-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0818a06c987259c78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public_subnets",
            "aws_vpc.solana_whale_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:211125441010:route-table/rtb-0ed2e7f24ad9431a9",
            "id": "rtb-0ed2e7f24ad9431a9",
            "owner_id": "211125441010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d1eeec35fa90b0a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "solana-whale-private-rt-2"
            },
            "tags_all": {
              "Name": "solana-whale-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0818a06c987259c78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public_subnets",
            "aws_vpc.solana_whale_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:211125441010:route-table/rtb-07a77c6ac59119033",
            "id": "rtb-07a77c6ac59119033",
            "owner_id": "211125441010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043dd2f455b505cbd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "solana-whale-public-rt"
            },
            "tags_all": {
              "Name": "solana-whale-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0818a06c987259c78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.solana_whale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc7d0673a5029ebc",
            "route_table_id": "rtb-0eef0a82d3eed3410",
            "subnet_id": "subnet-065e913036ba98138"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.solana_whale_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054b788042ad3e6b8",
            "route_table_id": "rtb-0ed2e7f24ad9431a9",
            "subnet_id": "subnet-0c2b01991c6e05316"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.solana_whale_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c4d1a3550a05468",
            "route_table_id": "rtb-07a77c6ac59119033",
            "subnet_id": "subnet-0043b52aa2eed8ee7"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.solana_whale_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0804103af623c5a79",
            "route_table_id": "rtb-07a77c6ac59119033",
            "subnet_id": "subnet-086250dee9cabef60"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.solana_whale_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:211125441010:security-group/sg-04beda6838a519147",
            "description": "Allow outbound traffic for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04beda6838a519147",
            "ingress": [],
            "name": "solana-whale-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "211125441010",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0818a06c987259c78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.solana_whale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:211125441010:subnet/subnet-065e913036ba98138",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065e913036ba98138",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125441010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "solana-whale-private-subnet-1"
            },
            "tags_all": {
              "Name": "solana-whale-private-subnet-1"
            },
            "vpc_id": "vpc-0818a06c987259c78"
          },
          "dependencies": [
            "aws_vpc.solana_whale_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:211125441010:subnet/subnet-0c2b01991c6e05316",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2b01991c6e05316",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125441010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "solana-whale-private-subnet-2"
            },
            "tags_all": {
              "Name": "solana-whale-private-subnet-2"
            },
            "vpc_id": "vpc-0818a06c987259c78"
          },
          "dependencies": [
            "aws_vpc.solana_whale_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:211125441010:subnet/subnet-0043b52aa2eed8ee7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0043b52aa2eed8ee7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125441010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "solana-whale-public-subnet-1"
            },
            "tags_all": {
              "Name": "solana-whale-public-subnet-1"
            },
            "vpc_id": "vpc-0818a06c987259c78"
          },
          "dependencies": [
            "aws_vpc.solana_whale_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:211125441010:subnet/subnet-086250dee9cabef60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086250dee9cabef60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125441010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "solana-whale-public-subnet-2"
            },
            "tags_all": {
              "Name": "solana-whale-public-subnet-2"
            },
            "vpc_id": "vpc-0818a06c987259c78"
          },
          "dependencies": [
            "aws_vpc.solana_whale_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "solana_whale_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:211125441010:vpc/vpc-0818a06c987259c78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0110037ea15be7ea3",
            "default_route_table_id": "rtb-0badac3bd45070c6d",
            "default_security_group_id": "sg-0df457a5a4c5135a7",
            "dhcp_options_id": "dopt-0cd2e3bdd6579333d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0818a06c987259c78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0badac3bd45070c6d",
            "owner_id": "211125441010",
            "tags": {
              "Name": "solana-whale-vpc"
            },
            "tags_all": {
              "Name": "solana-whale-vpc"
            }
          }
        }
      ]
    }
  ]
}